Revise instructions and add references in index.html
Updated instructions for data loading and added references section.

--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
         <strong>How to use:</strong><br>
         1. Select a file (.dat, .wpt, .csv, .txt, .kml) or paste rows from your data software.<br>
         2. Click <strong>"Load Data"</strong> to populate the table. Garmin formats are automatically detected.<br>
-        3. Verify the information and click the descriptive download button for your specific avionics.<br>
-        <span style="font-size: 12px; opacity: 0.8;">Reference: <a href="https://www.moog.com/products/avionics/aircraft-avionics/pilot-guides.html" target="_blank">Official Genesys IDU Pilot Guides</a></span>
+        3. Verify information and click the descriptive download button for your specific avionics.<br>
+        <div style="font-size: 12px; opacity: 0.8; margin-top: 5px;">
+            <strong>References:</strong> 
+            <a href="https://www.moog.com/products/avionics/aircraft-avionics/pilot-guides.html" target="_blank">Genesys IDU Guides</a> | 
+            <a href="https://support.garmin.com/en-US/?faq=3mcdU37gXi88ipwjJIxJo7" target="_blank">Garmin GTN Wpt Guide</a>
+        </div>
     </div>
 
     <div style="display: flex; gap: 20px; margin-bottom: 20px; flex-wrap: wrap;">
